fix(flat-components): periodic room detail page overflow

--- a/desktop/renderer-app/src/pages/PeriodicRoomDetailPage/index.less
+++ b/desktop/renderer-app/src/pages/PeriodicRoomDetailPage/index.less
@@ -10,6 +10,7 @@
 }
 
 .periodic-room-detail-page-header-container {
+    border-radius: 6px;
     padding: 16px 24px;
 }
 
