--- a/web/flat-web/src/pages/PeriodicRoomDetailPage/style.less
+++ b/web/flat-web/src/pages/PeriodicRoomDetailPage/style.less
@@ -1,12 +1,5 @@
 .periodic-room-detail-page-container {
-    display: flex;
-    flex-direction: column;
     height: 100%;
-}
-
-.periodic-room-detail-page-header-container {
-    width: 960px;
-    margin: 0 auto;
 }
 
 .periodic-room-detail-page-header-title {
@@ -15,11 +8,4 @@
     font-weight: 500;
     color: var(--text-strong);
     line-height: 1;
-}
-
-.periodic-room-detail-page-panel-container {
-    flex: 1;
-    width: 960px;
-    margin: 0 auto;
-    border-radius: 6px;
 }
